fixed button spacing

--- a/css/style.css
+++ b/css/style.css
@@ -124,7 +124,7 @@ p {
 }
 
 .project-buttons {
-  margin-left: 25px;
+  margin-left: 50px;
 }
 
 /*---------------------------------------
